# mediascribe-agent

./: .gitignore  README.md  examples.md  main.py  pyproject.toml
agent/: __init__.py  config.py  llm.py  mediascribe.py  pipeline.py  research.py  synthesize.py  util.py
example-outputs/: google-docs-4-style.md  google-docs-5-style.md  google-docs-6-style.md  google-docs-7-style.md  google-docs-8-style.md  google-docs-9-style.md  google-docs-style.md  instagram-style-2.md  instagram-style-3.md  instagram-style.md
tests/: test_offline.py
