[project]
name = "mediascribe-agent"
version = "0.1.0"
description = "A LangChain agent that uses my Mediascribe API to answer questions about architecture."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.14.4",
    "deepagents>=0.6.12",
    "langchain>=1.3.13",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.5",
]
