[project]
name = "mediascribe-agent"
version = "0.2.0"
description = "A lean, deterministic agent that answers architecture questions using the Mediascribe API, tuned for a small local model with a limited context window."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
